fixed header text alignment

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ blockquote {
   font-size: 1.5em;
   font-weight: 700;
   text-transform: uppercase;
+  text-align: center;
   letter-spacing: -1px;
 }
 
